testsuite/tests/grammar/invalid_lexers/pattern_9.lkt
from common import Example

lexer foo_lexer {
    val pat = 1
}
